D2: reencode indexf series to UTF-8

--- a/indexf3d1.html
+++ b/indexf3d1.html
@@ -8,7 +8,7 @@
         <meta name="robots" content="index,follow" />
         <meta name="description" content="Как выявить лидеров в своей компании?  Если Вам нужен человек на ответственную управляющую должность, как определить, кто из нескольких кандидатур подойдет лучше?  Сильный лидер должен обладать личной властью, чтобы его слушали. Но чтобы люди вдохновлялись и сами хотели следовать за ним, одной власти не достаточно. Нужна энергия сердца.  Кто-то может позиционировать себя очень хорошо, но на деле просто стремиться к власти. Он будет "держать поляну", но не сможет стать лидером, за которым люди захотят пойти. Кто-то может казаться тихоней и не рваться в бой на своем месте. Просто потому что там это не нужно. Но внутри он может иметь огромный потенциал, который станет очевиден только в условиях требующих того.  Все люди разные, и никогда не знаешь, как проявится человек получив власть. Ошибка в этом решении может стоить очень дорого. Поэтому, если Вы не уверены в том, кого выбрать на ответственную должность — сначала лучше протестировать." />
         <meta name="keywords" content="" />
-        <meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="rss/index.html" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
         
