--- a/printf63d.html
+++ b/printf63d.html
@@ -1,10 +1,10 @@
 <html>
-<title>×òî òàêîå êîó÷èíã</title>
+<title>Что такое коучинг</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=AA9E9174-F4613-7D3087C4 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:59:38 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='êîó÷èíã'>
-<meta name="description" content='...â äâóõ ñëîâàõ.'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='коучинг'>
+<meta name="description" content='...в двух словах.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,10 +14,10 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>×òî òàêîå êîó÷èíã</h1><a href=indexf63d.html?id=AA9E9174-F4613-7D3087C4 class=slink>web-âåðñèÿ</a><p><span class='print'><p><strong>...â äâóõ ñëîâàõ</strong>.</p>
-<p>Êîó÷èíã - ýòî ôîðìà èíäèâèäóàëüíîãî òðåíèíãà, ïîìîãàþùàÿ ÷åëîâåêó ñàìîìó íàéòè íàèáîëåå ýôôåêòèâíûå ñïîñîáû ðåøåíèÿ ñâîèõ çàäà÷. Êîó÷èíã îðèåíòèðîâàí íà öåëè è çàäà÷è, êàê ïðàâèëî, â äåëîâîì êîíòåêñòå, íî òàê êàê âñå â æèçíè ÷åëîâåêà âçàèìîñâÿçàíî, êîó÷èíã èìååò âñå íåîáõîäèìûå âîçìîæíîñòè, ïîçâîëÿþùèå íàéòè êîìïëåêñíûå ðåøåíèÿ, ó÷èòûâàþùèå âñå ñèñòåìíûå âçàèìîñâÿçè. Êîó÷ ïîìîãàåò êëèåíòó îïðåäåëèòü íàèáîëåå âàæíûå öåëè, ñôîêóñèðîâàòüñÿ íà íèõ è äîñòè÷ü èõ íàèáîëåå îïòèìàëüíûì ñïîñîáîì, íàõîäÿ ñàìûå ýôôåêòèâíûå ðåøåíèÿ.</p>
-<p>Êîó÷èíã âîçíèê íà ñòûêå ïñèõîëîãèè, ìåíåäæìåíòà è ñïîðòà. Îñíîâíàÿ çàäà÷à êîó÷èíãà – ñòèìóëèðîâàòü ñàìîîáó÷åíèå òàê, ÷òîáû ÷åëîâåê ñìîã ñàì íàõîäèòü è ïîëó÷àòü íåîáõîäèìûå çíàíèÿ. Îí ïîçâîëÿåò ðàñêðûòü âíóòðåííèé ïîòåíöèàë ÷åëîâåêà è ïðèâåñòè â äåéñòâèå åãî ñèñòåìû ìîòèâàöèè.</p>
-<p align="right"><em>Åãîð Áóëûãèí<br><font size="1">12.12.2007</font></em></p>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Что такое коучинг</h1><a href=indexf63d.html?id=AA9E9174-F4613-7D3087C4 class=slink>web-версия</a><p><span class='print'><p><strong>...в двух словах</strong>.</p>
+<p>Коучинг - это форма индивидуального тренинга, помогающая человеку самому найти наиболее эффективные способы решения своих задач. Коучинг ориентирован на цели и задачи, как правило, в деловом контексте, но так как все в жизни человека взаимосвязано, коучинг имеет все необходимые возможности, позволяющие найти комплексные решения, учитывающие все системные взаимосвязи. Коуч помогает клиенту определить наиболее важные цели, сфокусироваться на них и достичь их наиболее оптимальным способом, находя самые эффективные решения.</p>
+<p>Коучинг возник на стыке психологии, менеджмента и спорта. Основная задача коучинга – стимулировать самообучение так, чтобы человек смог сам находить и получать необходимые знания. Он позволяет раскрыть внутренний потенциал человека и привести в действие его системы мотивации.</p>
+<p align="right"><em>Егор Булыгин<br><font size="1">12.12.2007</font></em></p>
 <p align="center"><font face="Verdana" size="2"><a name='vote'></a><script type='text/javascript'>
 function light(num){
     if(num >= 1) document.getElementById('star1').className = 'active';
@@ -40,16 +40,16 @@ function voted(){
 }
 </script>
     <div class='mark' style='white-space: nowrap; width: 208px; overflow: hidden; float: left;'>
-    <div class='service'>Îöåíèòü:</div>
+    <div class='service'>Оценить:</div>
     <div class='stars' id='stars'>
-    <a href='setup0510.html?id=AA9E9174-F4613-7D3087C4&amp;vote=1&amp;close=1' target='_blank' title='Óæàñíî!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup7b07.html?id=AA9E9174-F4613-7D3087C4&amp;vote=2&amp;close=1' target='_blank' title='Ïëîõî'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupee4b.html?id=AA9E9174-F4613-7D3087C4&amp;vote=3&amp;close=1' target='_blank' title='Ñðåäíå'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup4f8e.html?id=AA9E9174-F4613-7D3087C4&amp;vote=4&amp;close=1' target='_blank' title='Õîðîøî'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup9194.html?id=AA9E9174-F4613-7D3087C4&amp;vote=5&amp;close=1' target='_blank' title='Îòëè÷íî!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup0510.html?id=AA9E9174-F4613-7D3087C4&amp;vote=1&amp;close=1' target='_blank' title='Ужасно!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup7b07.html?id=AA9E9174-F4613-7D3087C4&amp;vote=2&amp;close=1' target='_blank' title='Плохо'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupee4b.html?id=AA9E9174-F4613-7D3087C4&amp;vote=3&amp;close=1' target='_blank' title='Средне'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup4f8e.html?id=AA9E9174-F4613-7D3087C4&amp;vote=4&amp;close=1' target='_blank' title='Хорошо'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup9194.html?id=AA9E9174-F4613-7D3087C4&amp;vote=5&amp;close=1' target='_blank' title='Отлично!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
     </div>
     <div class='line' id='line'></div>
-    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Ñïàñèáî!</div>
+    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Спасибо!</div>
     </div> <div style='padding-top: 10px;'><!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_facebook"></a>
@@ -72,12 +72,12 @@ function voted(){
 
 <script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>
 <script type="text/javascript" src="../s7.addthis.com/js/250/addthis_widget.js#pubid=nlping"></script>
-<!-- AddThis Button END --></div> <div class='relateditems'><p>Ëó÷øèå ìàòåðèàëû ðàçäåëà &quot;Êîó÷èíã&quot;</p> <ul><li><a href='80CE685C-F4614-5D368325.html' title='Êðàòêàÿ èñòîðèÿ ðàçâèòèÿ êîó÷èíãà.'>Êîó÷èíã. Ñòàäèè  ðàçâèòèÿ.</a></li><li><a href='F487A.html' title='×òî äåëàåò êîó÷èíã ñòîëü ýôôåêòèâíûì èíñòðóìåíòîì, è êàê ýòî ðàáîòàåò?'>Âñå äåëî â êîó÷-ïîçèöèè</a></li></ul></div> 
-<h3>Êîììåíòàðèè Facebook</h3>
+<!-- AddThis Button END --></div> <div class='relateditems'><p>Лучшие материалы раздела &quot;Коучинг&quot;</p> <ul><li><a href='80CE685C-F4614-5D368325.html' title='Краткая история развития коучинга.'>Коучинг. Стадии  развития.</a></li><li><a href='F487A.html' title='Что делает коучинг столь эффективным инструментом, и как это работает?'>Все дело в коуч-позиции</a></li></ul></div> 
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/AA9E9174-F4613-7D3087C4" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
@@ -100,13 +100,13 @@ VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
     })();
 </script>
  </font>
-</p></span><p><a href=indexf63d.html?id=AA9E9174-F4613-7D3087C4 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</p></span><p><a href=indexf63d.html?id=AA9E9174-F4613-7D3087C4 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -167,7 +167,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -189,7 +189,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
