--- a/printf702.html
+++ b/printf702.html
@@ -1,10 +1,10 @@
 <html>
-<title>4 ýòàïà ðàçâèòèÿ áèçíåñìåíà</title>
+<title>4 этапа развития бизнесмена</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=4Qart by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:03:36 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
-<meta name="description" content='Êàê íóæíî èçìåíèòü ñâîå ìûøëåíèå, ÷òîáû âûéòè íà íîâûé óðîâåíü â áèçíåñå'>
+<meta name="description" content='Как нужно изменить свое мышление, чтобы выйти на новый уровень в бизнесе'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,8 +14,8 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>4 ýòàïà ðàçâèòèÿ áèçíåñìåíà</h1><a href=indexf702.html?id=4Qart class=slink>web-âåðñèÿ</a><p><span class='print'><p style="text-align: center;">
-	<span style="font-size: 14px;">Êàê íóæíî èçìåíèòü ñâîå ìûøëåíèå, ÷òîáû âûéòè íà íîâûé óðîâåíü â áèçíåñå?</span></p>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>4 этапа развития бизнесмена</h1><a href=indexf702.html?id=4Qart class=slink>web-версия</a><p><span class='print'><p style="text-align: center;">
+	<span style="font-size: 14px;">Как нужно изменить свое мышление, чтобы выйти на новый уровень в бизнесе?</span></p>
 <p style="text-align: center;">
 	&nbsp;</p>
 <p style="text-align: center;">
@@ -23,13 +23,13 @@ body {
 <p>
 	&nbsp;</p>
 <p>
-	<span style="font-size: 14px;">Ñóùåñòâóåò 4 ýòàïà ìîðàëüíîãî ñîçðåâàíèÿ, ÷åðåç êîòîðûé ïðîõîäèò êàæäûé áèçíåñìåí ïî ìåðå ñâîåãî ðîñòà îò íàåìíèêà ê èíâåñòîðó. Óäèâèòåëüíûì îáðàçîì ýòè ýòàïû ñîâïàäàþò ñ 4 êâàäðàíòàìè Êèéîñàêè, 4 îñíîâíûì àðõåòèïàìè è 4 êàñòàìè èíäèéñêîé êóëüòóðû (èíòåðåñíî, ïî÷åìó?)</span></p>
+	<span style="font-size: 14px;">Существует 4 этапа морального созревания, через который проходит каждый бизнесмен по мере своего роста от наемника к инвестору. Удивительным образом эти этапы совпадают с 4 квадрантами Кийосаки, 4 основным архетипами и 4 кастами индийской культуры (интересно, почему?)</span></p>
 <p>
-	<span style="font-size: 14px;">Êàæäûé ýòàï èìååò ñâîþ ïàðàäèãìó ìûøëåíèÿ. Åñëè ïàðàäèãìó ìûøëåíèÿ íå èçìåíèòü, òî äàæå ïðè íàëè÷èè âñåõ òåõíè÷åñêèõ íàâûêîâ (óïðàâëåíèå ïåðñîíàëîì, ïðîäàæè, ITC), ïåðåõîäà íå ïðîèçîéäåò. À åñëè íà÷àòü èçìåíåíèÿ ñ ïàðàäèãìû, òî òåõíè÷åñêèå íàâûêè ïîäòÿíóòñÿ ñàìè ñîáîé.</span></p>
+	<span style="font-size: 14px;">Каждый этап имеет свою парадигму мышления. Если парадигму мышления не изменить, то даже при наличии всех технических навыков (управление персоналом, продажи, ITC), перехода не произойдет. А если начать изменения с парадигмы, то технические навыки подтянутся сами собой.</span></p>
 <p>
-	<span style="font-size: 14px;">Åñëè Âû ÷óâñòâóåòå, ÷òî ðàçâèâàåòåñü&nbsp; â áèçíåñå ìåäëåííî, íî ïîòåíöèàëüíî ìîæåòå äâèãàòüñÿ íàìíîãî áûñòðåå &ndash; îáðàòèòå âíèìàíèå íà òî, êàêèå ïðèíöèïû&nbsp; Âû íå ó÷ëè.&nbsp;</span></p>
+	<span style="font-size: 14px;">Если Вы чувствуете, что развиваетесь&nbsp; в бизнесе медленно, но потенциально можете двигаться намного быстрее &ndash; обратите внимание на то, какие принципы&nbsp; Вы не учли.&nbsp;</span></p>
 <p>
-	<span style="font-size: 14px;">Î 4 êëþ÷åâûõ ïðèíöèïàõ, õàðàêòåðèçóþùèõ êàæäóþ ïàðàäèãìó ìûøëåíèÿ, à òàêæå, ÷òî êîíêðåòíî ìîæíî ñäåëàòü äëÿ ïåðåõîäà íà íîâûé ýòàï, ÿ ðàññêàæó íà ìàñòåð-êëàññå <a href="index5585.html?id=F4A17">&quot;Äåíåæíûé èíòåëëåêò - 4Q&quot;</a>.</span></p>
+	<span style="font-size: 14px;">О 4 ключевых принципах, характеризующих каждую парадигму мышления, а также, что конкретно можно сделать для перехода на новый этап, я расскажу на мастер-классе <a href="index5585.html?id=F4A17">&quot;Денежный интеллект - 4Q&quot;</a>.</span></p>
 <p>
 	&nbsp;</p>
 <p style="text-align: center;">
@@ -55,16 +55,16 @@ function voted(){
 }
 </script>
     <div class='mark' style='white-space: nowrap; width: 208px; overflow: hidden; float: left;'>
-    <div class='service'>Îöåíèòü:</div>
+    <div class='service'>Оценить:</div>
     <div class='stars' id='stars'>
-    <a href='setup73ce.html?id=4Qart&amp;vote=1&amp;close=1' target='_blank' title='Óæàñíî!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup0f1b.html?id=4Qart&amp;vote=2&amp;close=1' target='_blank' title='Ïëîõî'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupcf00.html?id=4Qart&amp;vote=3&amp;close=1' target='_blank' title='Ñðåäíå'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup5f47.html?id=4Qart&amp;vote=4&amp;close=1' target='_blank' title='Õîðîøî'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupf22f.html?id=4Qart&amp;vote=5&amp;close=1' target='_blank' title='Îòëè÷íî!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup73ce.html?id=4Qart&amp;vote=1&amp;close=1' target='_blank' title='Ужасно!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup0f1b.html?id=4Qart&amp;vote=2&amp;close=1' target='_blank' title='Плохо'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupcf00.html?id=4Qart&amp;vote=3&amp;close=1' target='_blank' title='Средне'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup5f47.html?id=4Qart&amp;vote=4&amp;close=1' target='_blank' title='Хорошо'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupf22f.html?id=4Qart&amp;vote=5&amp;close=1' target='_blank' title='Отлично!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
     </div>
     <div class='line' id='line'></div>
-    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Ñïàñèáî!</div>
+    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Спасибо!</div>
     </div> <div style='padding-top: 10px;'><!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_facebook"></a>
@@ -87,12 +87,12 @@ function voted(){
 
 <script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>
 <script type="text/javascript" src="../s7.addthis.com/js/250/addthis_widget.js#pubid=nlping"></script>
-<!-- AddThis Button END --></div> <div class='relateditems'><p>Ëó÷øèå ìàòåðèàëû ðàçäåëà &quot;Áèçíåñ, ìàðêåòèíã è ïðîäàæè&quot;</p> <ul><li><a href='F4AF2.html' title='Óïðàæíåíèå, ïîçâîëÿþùåå îïðåäåëèòü âàøó íèøó, óâèäåòü âàøåãî êëèåíòà è ñïîñîáû åãî ïðèâëå÷åíèÿ'>Âàø Áîá</a></li><li><a href='F4A88.html' title='Êàê òîëüêî Âû íà÷èíàåòå çàíèìàòüñÿ áèçíåñîì èëè ïðîäàæàìè, Âû ïîïàäàåòå â êëàññè÷åñêóþ äèëåììó Ëèäåðà: «Áûòü õîðîøèì ÷åëîâåêîì èëè ýôôåêòèâíî óïðàâëÿòü?».  Êàê âûéòè èç ýòîé äèëåììû è ñîâìåñòèòü è òî, è òî?'>Õîðîøèé äðóã - ïëîõîé äèðåêòîð. Êàê ñîâìåñòèòü è òî, è òî?</a></li><li><a href='F48AF.html' title='Ïðî îäèí èç ãëàâíûõ íàâûêîâ áèçíåñ-ìûøëåíèÿ, êîòîðûé íå òîëüêî äåëàåò íàøè äåéñòâèÿ íà ïîðÿäîê ýôôåêòèâíåå, íî è âûâîäèò íà íîâûé óðîâåíü çðåëîñòè.'>Õîòèòå ëó÷øèõ ðåçóëüòàòîâ? Ìûñëèòå ïðîåêòàìè!</a></li><li><a href='F4CE5.html' title=''>Ñàìûå ïîêóïàåìûå òåìû 2012<br/> (ñòàòèñòèêà ðàñïðîäàæè)</a></li><li><a href='F4C29.html' title='Ìîæíî âîñïðèíÿòü ýòó ñòàòüþ êàê øóòêó, à ìîæíî è êîå-÷òî ïîëåçíîå äëÿ ñåáÿ óçàòü ;) Íàïèøèòå, ïîæàëóéñòà, â êîììåíòàðèÿõ íàèáîëåå èíòåðåñíûå âàì òåìû (êàêîé òðåíèíã âû êóïèëè áû), èëè ïðèäóìàéòå ñâîþ òåìó. Òàêæå, ïðî÷èòàéòå ÷óæèå êîììåíòàðèè, è åñëè âàøà òåìà ñîâïàäàåò ñ ÷üåé-òî, òî ïîñòàâüòå êîììåíòàðèþ Ëàéê.'>Òåìû òðåíèíãîâ, ìîçãîâîé øòóðì</a></li></ul></div> 
-<h3>Êîììåíòàðèè Facebook</h3>
+<!-- AddThis Button END --></div> <div class='relateditems'><p>Лучшие материалы раздела &quot;Бизнес, маркетинг и продажи&quot;</p> <ul><li><a href='F4AF2.html' title='Упражнение, позволяющее определить вашу нишу, увидеть вашего клиента и способы его привлечения'>Ваш Боб</a></li><li><a href='F4A88.html' title='Как только Вы начинаете заниматься бизнесом или продажами, Вы попадаете в классическую дилемму Лидера: «Быть хорошим человеком или эффективно управлять?».  Как выйти из этой дилеммы и совместить и то, и то?'>Хороший друг - плохой директор. Как совместить и то, и то?</a></li><li><a href='F48AF.html' title='Про один из главных навыков бизнес-мышления, который не только делает наши действия на порядок эффективнее, но и выводит на новый уровень зрелости.'>Хотите лучших результатов? Мыслите проектами!</a></li><li><a href='F4CE5.html' title=''>Самые покупаемые темы 2012<br/> (статистика распродажи)</a></li><li><a href='F4C29.html' title='Можно воспринять эту статью как шутку, а можно и кое-что полезное для себя узать ;) Напишите, пожалуйста, в комментариях наиболее интересные вам темы (какой тренинг вы купили бы), или придумайте свою тему. Также, прочитайте чужие комментарии, и если ваша тема совпадает с чьей-то, то поставьте комментарию Лайк.'>Темы тренингов, мозговой штурм</a></li></ul></div> 
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/4Qart" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
@@ -117,16 +117,16 @@ VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
  </font></p>
 <p style="text-align: right;">
 	<br />
-	Åãîð Áóëûãèí</p>
+	Егор Булыгин</p>
 <p style="text-align: right;">
 	23.08.2011</p>
-</span><p><a href=indexf702.html?id=4Qart class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=indexf702.html?id=4Qart class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -187,7 +187,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -209,7 +209,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
