--- a/printf9e5.html
+++ b/printf9e5.html
@@ -2,7 +2,7 @@
 <title>Как инвестировать время</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F479A by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:54 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Каждый человек уникален. Ведь кроме генетического потенциала мы имеем свой неповторимый жизненный опыт, который (каким-бы он ни был) в любом случае дал нам очень многое...'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
