--- a/printfaac.html
+++ b/printfaac.html
@@ -1,10 +1,10 @@
 <html>
-<title>Áàéêè è ïðèò÷è</title>
+<title>Байки и притчи</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=600117C7-F45F0-9F94D6EA by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:15:34 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
-<meta name="description" content='Êàæäàÿ ïðèò÷à - ýòî ìåòàôîðà, èìåþùàÿ íåñêîëüêî óðîâíåé ñìûñëà. Çäåñü íàõîäÿòñÿ ñïåöèàëüíî ïîäîáðàííûå ïðèò÷è.'>
+<meta name="description" content='Каждая притча - это метафора, имеющая несколько уровней смысла. Здесь находятся специально подобранные притчи.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,15 +14,15 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Áàéêè è ïðèò÷è</h1><a href=indexfaac.html?id=600117C7-F45F0-9F94D6EA class=slink>web-âåðñèÿ</a><p><span class='print'><p>
-	<ul><li><h2><a href='FA3840E6-F45F3-D109ED98'>ÍËÏ-Äçåí</a></h2>Êîàíû ÍËÏ :)</li><li><h2><a href='05C2309E-F45F1-C047DAFA.html'>Äâà ìëàäåíöà</a></h2>Î âåðå. Î ïåðåðîæäåíèè. Î íîâîé æèçíè.</li><li><h2><a href='F2F5B577-F45F4-635C9E21.html'>Áëàãîäàðèòü äîëæåí äàþùèé</a></h2>Ïðèò÷à èç ñáîðíèêà 101 èñòîðèÿ äçåí.</li><li><h2><a href='8DBBC4B9-F45F5-CE624629.html'>Õîðîøåå è ïëîõîå</a></h2>Ïðèò÷à èç ñáîðíèêà 101 èñòîðèÿ äçåí.</li><li><h2><a href='2133DB58-F45F6-57CEAFC0.html'>Íàñòîÿùåå ÷óäî</a></h2>Ïðèò÷à èç ñáîðíèêà 101 èñòîðèÿ äçåí.</li><li><h2><a href='96DC0E5E-F45F7-9E999939.html'>Ìèðîâîå Ïðàâèòåëüñòâî</a></h2>Ãîòîâèìñÿ ìû òóò êàê-òî ñ Êîíñòàíòèíîì Ïóõîâûì ê íàøåìó Íîâîêîäîâñêîìó ÍËÏ-ïðàêòèêó, ìåäèòèðóåì íàä êîíöåïöèåé ñåãîäíÿøíåãî ÍËÏ, è âñïîìèíàåòñÿ íàøåìó òâîð÷åñòâó îäíà ïðèò÷à...</li><li><h2><a href='11EFAB56-F4620-8C197C8C.html'>Ñàìàÿ âêóñíàÿ êîíôåòà</a></h2>ÍËÏåðñêàÿ áàéêà.</li><li><h2><a href='B3682F35-F4707-7A393FEE.html'>Èñòîðèÿ îäíîãî êëåðêà</a></h2>Ïðî ìå÷òó è æèçíåííûé ïóòü.</li><li><h2><a href='F471C.html'>Ìàëåíüêàÿ äóøà è ñîëíöå</a></h2>Ïðèò÷à îò Íèëà Äîíàëüäà Óîëøà ïðî òî, êàê âàæíî ïîìíèòü, êòî ìû...</li><li><h2><a href='F4721.html'>Äðåâíèé ñóíäóê Íóðè Áåÿ</a></h2>Ñóôèéñêàÿ ïðèò÷à ïðî ñóïðóæåñêóþ âåðíîñòü âî âñåõ ñìûñëàõ ýòîãî ïîíèìàíèÿ.</li><li><h2><a href='F473F.html'>Ïðîïîâåäü ñâÿòîãî</a></h2>Ïðèò÷à îá èñòèííîì èíòåðåñå.</li><li><h2><a href='F475C.html'>Ïðîäàâåö ñ÷àñòüÿ</a></h2>Ïðèò÷à ïðî ñ÷àñòüå. Íåñìîòðÿ íà þìîð, î÷åíü æèçíåííî ;)</li><li><h2><a href='F4792.html'>Ñêàçêà ïðî êðåàòèâíîãî ìåíåäæåðà</a></h2>Ìåæäó ïðî÷èì, òàêîå ìîæåò ñëó÷èòñÿ ñ êàæäûì... è ëþáîé áóäåò òîìó î÷åíü ðàä! ;)</li><li><h2><a href='F4795.html'>Ïåðöîâûé ðàññâåò</a></h2>Ïðèò÷à ïðî ñîëü è ñìûñë íàøåé æèçíè, ïðî óíèêàëüíîñòü, ñêðûòóþ â êàæäîì ÷åëîâåêå, è ïðî âîçìîæíîñòü, êîòîðóþ íóæíî èñïîëüçîâàòü!</li><li><h2><a href='F479F.html'>Ïðèâû÷êè, ñòðàõè è óñïåõ</a></h2>Ìíîãèå èç íàñ õîòÿò íà÷àòü ÷òî-òî íîâîå, íî íå ìíîãèå ýòî äåëàþò. Ïî÷åìó? Ïîòîìó ÷òî ìû ïðèâûêëè ê òîìó ÷òî èìååì, êàêèì áû îíî íè áûëî. È ïðè ìûñëè îá èçìåíåíèÿõ ó ìíîãèõ èç íàñ ïîÿâëÿåòñÿ ñòðàõ... </li><li><h2><a href='F47A4.html'>Ïðèò÷à "Ãîâîðÿùàÿ ðûáà"</a></h2>Ñêàçêà äëÿ âçðîñëûõ ïðî íè÷åãî-íå-íåäåëàíèå è ñìûñë.</li><li><h2><a href='F47B7.html'>×òî õî÷åøü òû?</a></h2>Ïðèò÷à ïðî òî, êàê ìû óïðàâëÿåì ñâîåé æèçíüþ.</li><li><h2><a href='F4856.html'>Ñêàçêà ïðî êðåàòèâíîãî ÍËÏåðà</a></h2>Ñêàçêà äëÿ âçðîñëûõ. Ïî ïðîñüáå Àëüêè, êîòîðàÿ âåðèò â âîëøåáñòâî, â ñêàçêó ïðèãëàøåí Ôèîëåòîâûé Ñòðàóñ.</li><li><h2><a href='F4876.html'>Òðè òèïà ëîøàäåé</a></h2>Ïðèò÷à ïðî çíàíèå è äåéñòâèå.</li><li><h2><a href='F4A2F.html'>Êàê áðàìèíû ïîäâèíóëè êøàòðèåâ</a></h2>Òèïî ïðèò÷à ;)</li><li><h2><a href='F4A12.html'>Òâîÿ ÷àøà ñëèøêîì ïîëíà â÷åðàøíèì ÷àåì</a></h2>Â òåìó çàâåðøåíèÿ ðàñïðîäàæè ÿ õî÷ó ïîäåëèòüñÿ ñ Âàìè èçâåñòíîé ïðèò÷åé â òðåíåðñêîé ðàìêå...</li><li><h2><a href='blondy_strategy.html'>Ñòðàòåãèÿ èíôîáèçíåñà íà ÿçûêå áëîíäèíîê ;)</a></h2></li><li><h2><a href='F4C54.html'>Ïðèò÷à ïðî âûçûâàòåëÿ äîæäÿ</a></h2>Âåðñèÿ äëÿ ïðîäâèíóòîé àóäèòîðèè è òåõ, êòî â òåìå Ñïèðàëüíîé Äèíàìèêè</li></ul></p>
-</span><p><a href=indexfaac.html?id=600117C7-F45F0-9F94D6EA class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Байки и притчи</h1><a href=indexfaac.html?id=600117C7-F45F0-9F94D6EA class=slink>web-версия</a><p><span class='print'><p>
+	<ul><li><h2><a href='FA3840E6-F45F3-D109ED98'>НЛП-Дзен</a></h2>Коаны НЛП :)</li><li><h2><a href='05C2309E-F45F1-C047DAFA.html'>Два младенца</a></h2>О вере. О перерождении. О новой жизни.</li><li><h2><a href='F2F5B577-F45F4-635C9E21.html'>Благодарить должен дающий</a></h2>Притча из сборника 101 история дзен.</li><li><h2><a href='8DBBC4B9-F45F5-CE624629.html'>Хорошее и плохое</a></h2>Притча из сборника 101 история дзен.</li><li><h2><a href='2133DB58-F45F6-57CEAFC0.html'>Настоящее чудо</a></h2>Притча из сборника 101 история дзен.</li><li><h2><a href='96DC0E5E-F45F7-9E999939.html'>Мировое Правительство</a></h2>Готовимся мы тут как-то с Константином Пуховым к нашему Новокодовскому НЛП-практику, медитируем над концепцией сегодняшнего НЛП, и вспоминается нашему творчеству одна притча...</li><li><h2><a href='11EFAB56-F4620-8C197C8C.html'>Самая вкусная конфета</a></h2>НЛПерская байка.</li><li><h2><a href='B3682F35-F4707-7A393FEE.html'>История одного клерка</a></h2>Про мечту и жизненный путь.</li><li><h2><a href='F471C.html'>Маленькая душа и солнце</a></h2>Притча от Нила Дональда Уолша про то, как важно помнить, кто мы...</li><li><h2><a href='F4721.html'>Древний сундук Нури Бея</a></h2>Суфийская притча про супружескую верность во всех смыслах этого понимания.</li><li><h2><a href='F473F.html'>Проповедь святого</a></h2>Притча об истинном интересе.</li><li><h2><a href='F475C.html'>Продавец счастья</a></h2>Притча про счастье. Несмотря на юмор, очень жизненно ;)</li><li><h2><a href='F4792.html'>Сказка про креативного менеджера</a></h2>Между прочим, такое может случится с каждым... и любой будет тому очень рад! ;)</li><li><h2><a href='F4795.html'>Перцовый рассвет</a></h2>Притча про соль и смысл нашей жизни, про уникальность, скрытую в каждом человеке, и про возможность, которую нужно использовать!</li><li><h2><a href='F479F.html'>Привычки, страхи и успех</a></h2>Многие из нас хотят начать что-то новое, но не многие это делают. Почему? Потому что мы привыкли к тому что имеем, каким бы оно ни было. И при мысли об изменениях у многих из нас появляется страх... </li><li><h2><a href='F47A4.html'>Притча "Говорящая рыба"</a></h2>Сказка для взрослых про ничего-не-неделание и смысл.</li><li><h2><a href='F47B7.html'>Что хочешь ты?</a></h2>Притча про то, как мы управляем своей жизнью.</li><li><h2><a href='F4856.html'>Сказка про креативного НЛПера</a></h2>Сказка для взрослых. По просьбе Альки, которая верит в волшебство, в сказку приглашен Фиолетовый Страус.</li><li><h2><a href='F4876.html'>Три типа лошадей</a></h2>Притча про знание и действие.</li><li><h2><a href='F4A2F.html'>Как брамины подвинули кшатриев</a></h2>Типо притча ;)</li><li><h2><a href='F4A12.html'>Твоя чаша слишком полна вчерашним чаем</a></h2>В тему завершения распродажи я хочу поделиться с Вами известной притчей в тренерской рамке...</li><li><h2><a href='blondy_strategy.html'>Стратегия инфобизнеса на языке блондинок ;)</a></h2></li><li><h2><a href='F4C54.html'>Притча про вызывателя дождя</a></h2>Версия для продвинутой аудитории и тех, кто в теме Спиральной Динамики</li></ul></p>
+</span><p><a href=indexfaac.html?id=600117C7-F45F0-9F94D6EA class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -83,7 +83,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -105,7 +105,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
