--- a/printfb55.html
+++ b/printfb55.html
@@ -2,7 +2,7 @@
 <title>ТОП-5 страхов в публичных выступлениях</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4DF1 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:27:03 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Прежде, чем перейти к пяти самым большим страхам публичных выступлений, важно отметить, что само публичное выступление занимает второе место среди вообще всех возможных страхов, после страха смерти. Почему? Весь секрет в...
 '>
