--- a/printff8a.html
+++ b/printff8a.html
@@ -2,7 +2,7 @@
 <title>Что такое Игры Нового Кода НЛП</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=3B613833-F4244-5D2A14A0 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:30:55 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='новый код нлп, нлп'>
 <meta name="description" content='Каким критериям должна отвечать Игра Нового Кода НЛП - 6 основных принципов, данных Джоном Гриндером.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
