--- a/printffc6.html
+++ b/printffc6.html
@@ -1,8 +1,8 @@
 <html>
-<title>Êîíòàêòû è ðåêâèçèòû</title>
+<title>Контакты и реквизиты</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4A46 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:23:23 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content=''>
 <link rel="stylesheet" href="css/print.css" type="text/css">
@@ -14,36 +14,36 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Êîíòàêòû è ðåêâèçèòû</h1><a href=indexffc6.html?id=F4A46 class=slink>web-âåðñèÿ</a><p><span class='print'><h2>Êîíòàêòû</h2>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Контакты и реквизиты</h1><a href=indexffc6.html?id=F4A46 class=slink>web-версия</a><p><span class='print'><h2>Контакты</h2>
 
-<p>Òåëåôîí: +7 (495) 772-68-73<br />
+<p>Телефон: +7 (495) 772-68-73<br />
 E-mail: info@nlping.ru<br />
-<span style="font-size: 14px; background-color: rgb(255, 255, 255);">Àäðåñ: Ìîñêâà, Ëåíèíãðàäñêèé&nbsp;ïðîñïåêò, 80 êîðï. Ã, îôèñ 910</span></p>
+<span style="font-size: 14px; background-color: rgb(255, 255, 255);">Адрес: Москва, Ленинградский&nbsp;проспект, 80 корп. Г, офис 910</span></p>
 
-<h2>Þðèäè÷åñêàÿ èíôîðìàöèÿ</h2>
+<h2>Юридическая информация</h2>
 
-<p>ÈÏ Áóëûãèí Åãîð Ñåðãååâè÷<br />
-ÎÃÐÍ: 311774611100951<br />
-ÈÍÍ: 772802505050</p>
+<p>ИП Булыгин Егор Сергеевич<br />
+ОГРН: 311774611100951<br />
+ИНН: 772802505050</p>
 
-<h2>Áàíêîâñêèå ðåêâèçèòû</h2>
+<h2>Банковские реквизиты</h2>
 
-<p>Áàíê ïîëó÷àòåëÿ:<br />
-ÂÒÁ 24 (ÇÀÎ), ã. Ìîñêâà<br />
-ÁÈÊ: 044525716<br />
-Ê/ñ: 30101810100000000716<br />
+<p>Банк получателя:<br />
+ВТБ 24 (ЗАО), г. Москва<br />
+БИК: 044525716<br />
+К/с: 30101810100000000716<br />
 <br />
-Ïîëó÷àòåëü:<br />
-ÈÏ Áóëûãèí Åãîð Ñåðãååâè÷<br />
-ð/ñ: 40802810100000036560<br />
-<span style="font-size: 14px; background-color: rgb(255, 255, 255);">ÈÍÍ: 772802505050</span></p>
-</span><p><a href=indexffc6.html?id=F4A46 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+Получатель:<br />
+ИП Булыгин Егор Сергеевич<br />
+р/с: 40802810100000036560<br />
+<span style="font-size: 14px; background-color: rgb(255, 255, 255);">ИНН: 772802505050</span></p>
+</span><p><a href=indexffc6.html?id=F4A46 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -104,7 +104,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -126,7 +126,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
