--- a/indexf625.html
+++ b/indexf625.html
@@ -8,7 +8,7 @@
         <meta name="robots" content="index,follow" />
         <meta name="description" content="7-ми дневный DVD-курс по построению маркетинга для малого бизнеса. Если Вы имеете свой малый бизнес или планируете его открывать - этот тренинг для Вас. В ходе него Вы пройдете через ключевые шаги создания бизнеса, которые определяют его успех. И не просто узнаете об этом, а сделаете все что нужно, чтобы как миниум удвоить свои продажи сразу после тренинга. Чтобы познакомится с материалом тренинга - посмотрите видео и прочтите описание под ним." />
         <meta name="keywords" content="" />
-        <meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="rss/index.html" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
         
