--- a/printf2c2.html
+++ b/printf2c2.html
@@ -2,7 +2,7 @@
 <title>НЛП в рекламе. Обратная сторона SCORE</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=B6F22B64-F434A-5713D5A1 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:10:41 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Написание рекламных статей с помощью техники SCORE.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
