--- a/printf5a6.html
+++ b/printf5a6.html
@@ -2,7 +2,7 @@
 <title>Манипуляция личностью с помощью сдвига позиций восприятия</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=C58B0C1E-F4295-77030F66 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:10:40 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Внушение на уровне личностного своеобразия, сдвиг во вторую позицию и манипуляция при помощи внеконтекстного наложения социальных ролей.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
