--- a/printf778.html
+++ b/printf778.html
@@ -2,7 +2,7 @@
 <title>Слово "нищета" произошло от слов "не считать"</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4A98 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:04:28 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Человеческое сознание и этот мир так устроены, что как только ты начинаешь считать что-то возможным, оно им тут же и становится. Так богатые поддерживают собственным сознанием мир полный возможностей, и в очередной раз получают то что хотят.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
