--- a/printf847.html
+++ b/printf847.html
@@ -2,7 +2,7 @@
 <title>Что стоит за ревностью?</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F47C1 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:02:14 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='любовь, ревность, отношения, любимый'>
 <meta name="description" content='Когда мы называем ревность одним словом - это неверно. Ревность, это сложно образование, которое включает огромное количество чувств, переживаний, мыслей, намерений. Чтобы управлять ревностью, нужно понять, что стоит за ней на самом деле.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
