--- a/printf902.html
+++ b/printf902.html
@@ -1,10 +1,10 @@
 <html>
-<title>Âûáåðèòå îäíó èç òåì</title>
+<title>Выберите одну из тем</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4C2A by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:04:31 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
-<meta name="description" content='Èíîãäà, ÷òîáû çàêðûòü êàêèå-òî ëè÷íûå âîïðîñû (ïðîáëåìû) ïðîùå çàïëàòèòü (òðåíèíã, êîíñóëüòàöèÿ, êîó÷èíã), ÷åì ðàçáèðàòüñÿ â íèõ ñàìîñòîÿòåëüíî íå áóäó÷è ïðîôåññèîíàëîì. Îòâåòüòå, ïîæàëóéñòà, íà ñëåäóþùèé âîïðîñ: çà ðåøåíèå êàêîãî èç ýòèõ âîïðîñîâ âàì ïðîùå áûëî áû çàïëàòèòü, ÷åì ðåøàòü åãî ñàìîñòîÿòåëüíî áåç ïîääåðæêè? '>
+<meta name="description" content='Иногда, чтобы закрыть какие-то личные вопросы (проблемы) проще заплатить (тренинг, консультация, коучинг), чем разбираться в них самостоятельно не будучи профессионалом. Ответьте, пожалуйста, на следующий вопрос: за решение какого из этих вопросов вам проще было бы заплатить, чем решать его самостоятельно без поддержки? '>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,7 +14,7 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Âûáåðèòå îäíó èç òåì</h1><a href=indexf902.html?id=F4C2A class=slink>web-âåðñèÿ</a><p><span class='print'><p>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Выберите одну из тем</h1><a href=indexf902.html?id=F4C2A class=slink>web-версия</a><p><span class='print'><p>
 	<a name=poll></a>
 <table width="100%" border="0" cellspacing="0" cellpadding="1" bgcolor="#000000">
   <tr align="center"> 
@@ -27,7 +27,7 @@ body {
 
       <table width="100%" border="0" cellspacing="0" cellpadding="2" align="center" bgcolor="#FFFFFF">
         <tr> 
-          <td valign="middle" height="20"><font face="verdana, Arial, Helvetica, sans-serif" size="1"><b>ß ãîòîâ(à) çàïëàòèòü çà ðåøåíèå ýòîãî âîïðîñà:</b></font></td>
+          <td valign="middle" height="20"><font face="verdana, Arial, Helvetica, sans-serif" size="1"><b>Я готов(а) заплатить за решение этого вопроса:</b></font></td>
         </tr>
         <tr align="right" valign="top"> 
           <td>
@@ -37,29 +37,29 @@ body {
                   <td align=left> 
                     <table width="100%" border="0" cellspacing="0" cellpadding="1" align="center"> <tr> 
    <td width="20"><input type="radio" name="option_id" class=radio value="1"></td>
-   <td><font face="verdana, Arial, Helvetica, sans-serif" size=1>Êàê êîíâåðòèðîâàòü ñâîþ àãðåññèþ â ÷èñòóþ ýíåðãèþ?</font></td>
+   <td><font face="verdana, Arial, Helvetica, sans-serif" size=1>Как конвертировать свою агрессию в чистую энергию?</font></td>
  </tr>
  <tr> 
    <td width="20"><input type="radio" name="option_id" class=radio value="2"></td>
-   <td><font face="verdana, Arial, Helvetica, sans-serif" size=1>Êàê ðàçâèòü ñèëó âîëè?</font></td>
+   <td><font face="verdana, Arial, Helvetica, sans-serif" size=1>Как развить силу воли?</font></td>
  </tr>
  <tr> 
    <td width="20"><input type="radio" name="option_id" class=radio value="3"></td>
-   <td><font face="verdana, Arial, Helvetica, sans-serif" size=1>Êàê âûðàáîòàòü óâåðåííîñòü ïðè îáùåíèè ñ ëþäüìè âûøå ïî ñòàòóñó?</font></td>
+   <td><font face="verdana, Arial, Helvetica, sans-serif" size=1>Как выработать уверенность при общении с людьми выше по статусу?</font></td>
  </tr>
  <tr> 
    <td width="20"><input type="radio" name="option_id" class=radio value="4"></td>
-   <td><font face="verdana, Arial, Helvetica, sans-serif" size=1>Êàê ïðåîäîëåòü ñîöèàëüíûé áàðüåð ïðè îáùåíèè ñ ëþäüìè?</font></td>
+   <td><font face="verdana, Arial, Helvetica, sans-serif" size=1>Как преодолеть социальный барьер при общении с людьми?</font></td>
  </tr>
  <tr> 
    <td width="20"><input type="radio" name="option_id" class=radio value="5"></td>
-   <td><font face="verdana, Arial, Helvetica, sans-serif" size=1>Êàê ñîáëþäàòü ëè÷íûå ãðàíèöû: ñâîè è äðóãèõ ëþäåé?</font></td>
+   <td><font face="verdana, Arial, Helvetica, sans-serif" size=1>Как соблюдать личные границы: свои и других людей?</font></td>
  </tr>
                     </table>
                     <br>
                     <input type="hidden" name="action" value="vote">
                     <input type="hidden" name="poll_ident" value="50">
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="submit" value="Ïðîãîëîñîâàòü" class="input">
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="submit" value="Проголосовать" class="input">
                   </td>
                 </tr>
               </table>
@@ -72,7 +72,7 @@ body {
 </table>
 </p>
 <p>
-	<span style="font-size: 14px; background-color: rgb(255, 255, 255); ">Åñëè âñå èç ïðåäëîæåííûõ âîïðîñîâ ó âàñ óæå çàêðûòû, è âû õîòèòå ðåøèòü ÷òî-òî äðóãîå, òî íàïèøèòå ñâîþ òåìó â êîììåíòàðèÿõ.</span></p>
+	<span style="font-size: 14px; background-color: rgb(255, 255, 255); ">Если все из предложенных вопросов у вас уже закрыты, и вы хотите решить что-то другое, то напишите свою тему в комментариях.</span></p>
 <p>
 	<a name='vote'></a><script type='text/javascript'>
 function light(num){
@@ -96,16 +96,16 @@ function voted(){
 }
 </script>
     <div class='mark' style='white-space: nowrap; width: 208px; overflow: hidden; float: left;'>
-    <div class='service'>Îöåíèòü:</div>
+    <div class='service'>Оценить:</div>
     <div class='stars' id='stars'>
-    <a href='setup5c88.html?id=F4C2A&amp;vote=1&amp;close=1' target='_blank' title='Óæàñíî!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupca0d.html?id=F4C2A&amp;vote=2&amp;close=1' target='_blank' title='Ïëîõî'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupd991.html?id=F4C2A&amp;vote=3&amp;close=1' target='_blank' title='Ñðåäíå'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupee82.html?id=F4C2A&amp;vote=4&amp;close=1' target='_blank' title='Õîðîøî'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupca21.html?id=F4C2A&amp;vote=5&amp;close=1' target='_blank' title='Îòëè÷íî!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup5c88.html?id=F4C2A&amp;vote=1&amp;close=1' target='_blank' title='Ужасно!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupca0d.html?id=F4C2A&amp;vote=2&amp;close=1' target='_blank' title='Плохо'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupd991.html?id=F4C2A&amp;vote=3&amp;close=1' target='_blank' title='Средне'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupee82.html?id=F4C2A&amp;vote=4&amp;close=1' target='_blank' title='Хорошо'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupca21.html?id=F4C2A&amp;vote=5&amp;close=1' target='_blank' title='Отлично!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
     </div>
     <div class='line' id='line'></div>
-    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Ñïàñèáî!</div>
+    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Спасибо!</div>
     </div> <div style='padding-top: 10px;'><!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_facebook"></a>
@@ -156,22 +156,22 @@ var idcomments_post_url = 'F4C2A.html';
 		  fjs.parentNode.insertBefore(js, fjs);
 		}(document, 'script', 'facebook-jssdk'));</script>
 
-<h3>Êîììåíòàðèè Facebook</h3>
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/F4C2A" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
 </script></p>
-</span><p><a href=indexf902.html?id=F4C2A class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=indexf902.html?id=F4C2A class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -232,7 +232,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -254,7 +254,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
