--- a/printf9ea.html
+++ b/printf9ea.html
@@ -2,7 +2,7 @@
 <title>Эволюция ценностей: Теория Грэйвса и Спиральная динамика</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=432CBFC3-F44FD-314CDA54 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:59:48 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='спиральная динамика'>
 <meta name="description" content='Краткая ознакомительная статья Алексея Каптерева.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
