--- a/printfe6b.html
+++ b/printfe6b.html
@@ -2,7 +2,7 @@
 <title>Технология "Волшебная палочка" или Как заказать желание коллективному бессознательному</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=21BE0682-F42C4-46DA02B6 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:27:11 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='новый код нлп, нлп'>
 <meta name="description" content='Технология заказа желаний для исполнения.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
