--- a/7-levels-leadership.html
+++ b/7-levels-leadership.html
@@ -8,7 +8,7 @@
         <meta name="robots" content="index,follow" />
         <meta name="description" content="Как управлять людьми через их сознание и вдохновение?  В течение 30 лет Клэр Грэйвз исследовал более 50.000 человек и обнаружил, что все люди в ходе своего разития проходят один и тот же маршрут.    Этот "маршрут" состоит из единых 8 этапов - 8 уровней мышления. И каждому уровню соответствуют свои ценности, свои мотивы... и свое конкретное поведение, предсказуемое с точностью до реакции.  Иначе говоря, если Вы знаете на каком уровне мышления находится человек, Вы знаете про него все: как он мыслит, ради чего живет, какие глубинные страхи и желания его волнуют, и как он поступит в том или ином случае. И можете управлять им через его сознание и вдохновение." />
         <meta name="keywords" content="" />
-        <meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="rss/index.html" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
         
