Reencode initial F47x batch with updated limit strategy

--- a/F478D.html
+++ b/F478D.html
@@ -8,7 +8,7 @@
         <meta name="robots" content="index,follow" />
         <meta name="description" content="Если Вам случается работать с текстом, эти приемы помогут Вам создавать тексты легче и делать их более интересными, увлекательными и полезными." />
         <meta name="keywords" content="креативность" />
-        <meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="rss/index.html" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
         
