feat(encoding): reencode F4AA1…F4ACB to utf-8

--- a/F4AA6.html
+++ b/F4AA6.html
@@ -8,7 +8,7 @@
         <meta name="robots" content="index,follow" />
         <meta name="description" content="Третья точка монетизации тренинга, которая может принести Вам сразу около полумилиона рублей, и потом еще кормить Вас в течение года. Но самое главное - дать возможость пройти Ваш тренинг тем, кто не может этого сделать." />
         <meta name="keywords" content="" />
-        <meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="rss/index.html" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
         
