--- a/F4AA9.html
+++ b/F4AA9.html
@@ -8,7 +8,7 @@
         <meta name="robots" content="index,follow" />
         <meta name="description" content="Тренерский спецназ. И пошаговый план re:волюции, которая изменит мир. Ознакомится срочно!" />
         <meta name="keywords" content="Настало время приоткрыть занавес" />
-        <meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="rss/index.html" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
         
