--- a/F4ABD.html
+++ b/F4ABD.html
@@ -8,7 +8,7 @@
         <meta name="robots" content="index,follow" />
         <meta name="description" content="Независимо от того, какой у Вас бизнес, этот подарок для Вас будет просто денежным станком! ;) ...А если серьезно, то это принципиально новая маркетинговая технология, которой пока никто не пользуется в России. И мы дадим Вам ее совершенно бесплатно и с подробной инструкцией. То есть, это самый натуральный честный подарок.    Но чтобы понять, в чем ее суть, давайте уделим немного внимания базовым вещам - здесь это критично." />
         <meta name="keywords" content="«Денежный станок» для Вашего бизнеса в подарок!" />
-        <meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="rss/index.html" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
         
